Update Iron Man 3.html

--- a/available movies/Iron Man 3.html
+++ b/available movies/Iron Man 3.html
@@ -79,7 +79,7 @@
 
  <!-- modal comment -->
 
-<div data-visibility="false" class="comment-modal">
+<div data-visibility="true" class="comment-modal">
   <div class="text-modal">
     <h2>Please write something about the film</h2>
     <textarea placeholder="Enter your comments here"></textarea>
