--- a/available movies/Iron Man 3.html
+++ b/available movies/Iron Man 3.html
@@ -90,9 +90,9 @@
   </div>
 </div>
 <script>
-window.onload = () => {
-  alert('Enjoy ssob, ;>')
-}
+window.addEventListener('load', () => {
+  alert('Enjoy ssob :>')
+})
 const openBtn = document.querySelector('[data-open]');
 const closeBtn = document.querySelector('[data-close]');
 const mainContainer = document.querySelector('div.comment-modal');
